# face-recognition-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  facerec_detect.cpp  facerec_train.cpp  facerec_video.cpp
face_rec/: face_recognition.cpp  face_recognition.h  face_training.cpp  face_training.h
